--- a/Motives.WebTest.API/appsettings.json
+++ b/Motives.WebTest.API/appsettings.json
@@ -11,8 +11,8 @@
     "Motives": "Data Source=DESKTOP-FOKQQ5K;Initial Catalog=MotivesDb;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "JWT": {
-    "ValidAudience": "https://localhost:44362",
-    "ValidIssuer": "https://localhost:44362",
+    "ValidAudience": "localhost",
+    "ValidIssuer": "localhost",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   }
 }
